--- a/app/client/src/scss/global/_mixins.scss
+++ b/app/client/src/scss/global/_mixins.scss
@@ -1,3 +1,71 @@
+
+/*
+	Size in pixels, either 12, 8, or 6
+	Angle will rotate the whole bracket, either 0 or 90
+*/
+@mixin angleBracket($size, $angle, $bgcolour: colour(white)) {
+	transform: rotate($angle + deg);
+	width: 20px;
+	height: 20px;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	margin: auto;
+	z-index: 2;
+	
+	&::after,
+	&::before {
+		content: '';
+		display: block;
+		width: $size + px;
+		height: 2px;
+		background: $bgcolour;
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
+
+	&::before {
+		transform: rotate(-45deg);
+	}
+	
+	&::after {
+		transform: rotate(45deg);		
+	}
+
+	@if $size == 12 {
+		&::before {
+			left: 12px;
+			top: 20px;
+		}
+
+		&::after {
+			left: 12px;
+			top: 12px;
+		}
+	}
+
+	@if $size == 8 {
+		&::before {
+			top: 10px;
+		}
+		&::after {
+			top: 5px;
+		}
+	}
+
+	@if $size == 6 {
+		&::before {
+			top: 8px;
+		}
+		&::after {
+			top: 5px;
+		}
+	}
+}
+
+
 /**
  * [Subtracts the border and padding from the width of the element.]
  */
