--- a/app/client/src/scss/index.scss
+++ b/app/client/src/scss/index.scss
@@ -25,6 +25,10 @@
  **/
 @import "components/forms";
 @import "components/menu";
+@import "components/pagination";
+@import "components/product-summaries";
+@import "components/product-view";
+@import "components/collection-list";
 
 @import "components/elemental/banner-element";
 @import "components/elemental/content-element";
