--- a/app/client/src/scss/components/_collection-list.scss
+++ b/app/client/src/scss/components/_collection-list.scss
@@ -5,7 +5,7 @@
         display: inline-block;
 
         a {
-            font-size: 2rem;
+            font-size: 1.4rem;
             color: colour(black);
             text-decoration: none;
             display: block;
@@ -13,6 +13,7 @@
 
             &:hover {
                 color: colour(pink);
+                text-decoration: underline;
             }
         }
     }
