--- a/app/client/src/scss/components/_product-view.scss
+++ b/app/client/src/scss/components/_product-view.scss
@@ -15,3 +15,13 @@
         width: 100%;
     }
 }
+
+.product__tags {
+    margin: 3em 0;
+    
+    p {
+        font-size: 14px;
+        margin-bottom: 3px;
+    }
+
+}
